adding right part of contact

--- a/index.html
+++ b/index.html
@@ -119,26 +119,20 @@
             <section id="contacts-container">
                 <div id="contacts-container-left">
                     <article class="contact-box">
-                        <h4>E-mail <i class="fas fa-envelope"></i></h4>
+                        <h4>E-mail</h4>
                         <a href="mailto:corentinistace1@gmail.com" target="blank">corentinistace1@gmail.com</a>
                     </article>
                     <article class="contact-box">
-                        <h4>Linkedin <i class="fab fa-linkedin"></i></h4>
-                        <a href="https://www.linkedin.com/in/corentin-istace/">Istace Corentin</a>
-                    </article>
-                    <article class="contact-box">
-                        <h4>Phone <i class="fas fa-phone-square-alt"></i></h4>
+                        <h4>Phone</i></h4>
                         <a href="tel:+32495848128">+32 495/84.81.28</a>
-                    </article>
-                    <article class="contact-box">
-                        <h4>Github <i class="fab fa-github"></i></h4>
-                        <a href="https://github.com/corentinIstace">corentinIstace</a>
                     </article>
                 </div>
                 <div id="contacts-container-right">
-                    <a href="https://www.facebook.com/corentin.istace.7/" target="blank"><i class="social fab fa-facebook-square"></i></a>
-                    <a href="https://www.linkedin.com/in/corentin-istace/" target="blank"><i class="social fab fa-linkedin"></i></a>
-                    <a href="https://github.com/corentinIstace" target="blank"><i class="social fab fa-github"></i></a>       
+                <h3>Do you want to know more about my Knoledge ?</h3>
+                <div id="contacts-container-right-button">
+                    <button><a href="./gulp/img/CV-Corentin Istace.pdf" target="_blank">Take a look</a></button>
+                    <button><a href="./gulp/img/CV-Corentin Istace.pdf" download="CV-Corentin_Istace.pdf" target="_blank">Keep it</a></button>
+                </div>
                 </div>
             </section>
         </section>
