request finaly works

--- a/gulp/index.html
+++ b/gulp/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="gulp/style.css?rs=123">
+    <link rel="stylesheet" href="./gulp/style.css?cb=1637743741159">
     <title>Corentin Istace - Portfolio</title>
 </head>
 <body>
@@ -142,6 +142,6 @@
             <p><i class="far fa-copyright"></i> made by Corentin Istace</p>
         </div>
     </footer>
-    <script src="./gulp/concat.js?rs=123"></script>
+    <script src="./gulp/concat.js?cb=1637743741159"></script>
 </body>
 </html>
