--- a/gulp/index.html
+++ b/gulp/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./gulp/style.css?cb=1637743741159">
+    <link rel="stylesheet" href="./gulp/style.css?cb=1637746775394">
     <title>Corentin Istace - Portfolio</title>
 </head>
 <body>
@@ -56,8 +56,8 @@
                     <a href="">See this project.</a>
                     <P>Made with HTML - CSS </P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
                     </div>
                 </article>
                 <article class="project project2">
@@ -65,9 +65,9 @@
                     <a href="">See this project.</a>
                     <P>Made with HTML - Sass - Javascript - Gulp</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
                 </article>
 
@@ -76,18 +76,18 @@
                     <a href="">See this project.</a>
                     <P>Made with HTML - CSS - Javascript</P>  
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                 </article>
                 <article class="project project4">
                     <h3 class="project-title">weather app</h3>
                     <a href="">See this project.</a>
                     <P>Made with React</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
                 </article>
                 <article class="project project5">
@@ -95,9 +95,9 @@
                     <a href="">See this project.</a>
                     <P>Made with HTML - CSS - Javascript</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
                 </article>
                 <article class="project project6">
@@ -105,8 +105,8 @@
                     <a href="">See this project.</a>
                     <P>Mern project</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
                 </article>
             </div>
@@ -142,6 +142,6 @@
             <p><i class="far fa-copyright"></i> made by Corentin Istace</p>
         </div>
     </footer>
-    <script src="./gulp/concat.js?cb=1637743741159"></script>
+    <script src="./gulp/concat.js?cb=1637746775394"></script>
 </body>
 </html>
