change root of the svg

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <a href="">See this project.</a>
                     <P>Made with HTML - CSS </P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
                     </div>
                 </article>
                 <article class="project project2">
@@ -65,9 +65,9 @@
                     <a href="">See this project.</a>
                     <P>Made with HTML - Sass - Javascript - Gulp</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
                 </article>
 
@@ -76,18 +76,18 @@
                     <a href="">See this project.</a>
                     <P>Made with HTML - CSS - Javascript</P>  
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                 </article>
                 <article class="project project4">
                     <h3 class="project-title">weather app</h3>
                     <a href="">See this project.</a>
                     <P>Made with React</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
                 </article>
                 <article class="project project5">
@@ -95,9 +95,9 @@
                     <a href="">See this project.</a>
                     <P>Made with HTML - CSS - Javascript</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
                 </article>
                 <article class="project project6">
@@ -105,8 +105,8 @@
                     <a href="">See this project.</a>
                     <P>Mern project</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/img/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/img/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
                 </article>
             </div>
