--- a/gulp/index.html
+++ b/gulp/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./gulp/style.css?cb=1637756639550">
+    <link rel="stylesheet" href="./gulp/style.css?cb=1637768060999">
     <title>Corentin Istace - Portfolio</title>
 </head>
 <body>
@@ -33,12 +33,15 @@
                 <h1>Corentin Istace</h1>
                 <h2>A motivate junior Front-End web developer</h2>
             </div>
-            <button id="home-button"><a href="#contact">Call me </a></button>
+            <button id="home-button" onclick="document.location='#contact'">Call me</button>
         </section>
 
         <section class="part" id="about">
             <div class="part-title">
                 <h3>About me ~</h3>
+                <p>I have very good knowledge about HTML5, CSS3, SASS, Git and Github,</p>
+                <p>Good Knoledge about Javascript, PHP,</p>
+                <p>Basics Knoledge about React, Parcel, Gulp, Docker.</p>
             </div>
             <div id="about-container">
                 <img src="./gulp/img/linkedin.webp" alt="photo de moi">
@@ -52,61 +55,79 @@
             </div>
             <div id="projects-container">
                 <article class="project project1">
-                    <h3 class="project-title">Dj's project</h3>
-                    <a href="">See this project.</a>
+                    <h3 class="project-title">Dj's project</h3>                    
                     <P>Made with HTML - CSS </P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
                     </div>
+                    <div class="project-link-container">
+                        <a href="https://github.com/corentinIstace/dj-project" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
+                        <a href="https://corentinistace.github.io/dj-project/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                    </div>
                 </article>
                 <article class="project project2">
-                    <h3 class="project-title">This portfolio</h3>
-                    <a href="">See this project.</a>
+                    <h3 class="project-title">This portfolio</h3>                    
                     <P>Made with HTML - Sass - Javascript - Gulp</P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
                         <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
+                                      <div class="project-link-container">
+                        <a href="https://github.com/corentinIstace/portefolio" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
+                        <a href="https://corentinistace.github.io/portefolio/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                    </div>
                 </article>
-
                 <article class="project project3">
-                    <h3 class="project-title">Happy Street</h3>
-                    <a href="">See this project.</a>
+                    <h3 class="project-title">Happy Street</h3>                    
                     <P>Made with HTML - CSS - Javascript</P>  
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
                         <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
+                    </div>
+                                      <div class="project-link-container">
+                        <a href="https://github.com/corentinIstace/Hackaton" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
+                        <a href="" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                    </div>
                 </article>
                 <article class="project project4">
                     <h3 class="project-title">weather app</h3>
-                    <a href="">See this project.</a>
                     <P>Made with React</P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
                         <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
+                   <div class="project-link-container">
+                        <a href="https://github.com/corentinIstace/weather-app" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
+                        <a href="https://619cc0abe34a10e997aaec40--ci-my-weather-app.netlify.app/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                    </div>
                 </article>
                 <article class="project project5">
                     <h3 class="project-title">Random number game</h3>
-                    <a href="">See this project.</a>
                     <P>Made with HTML - CSS - Javascript</P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
                         <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
+                    <div class="project-link-container">
+                        <a href="https://github.com/corentinIstace/jeux" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
+                        <a href="https://upbeat-spence-4b1f46.netlify.app/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                    </div>
                 </article>
                 <article class="project project6">
                     <h3 class="project-title">Tree Lidge Game</h3>
-                    <a href="">See this project.</a>
                     <P>Mern project</P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
+                    </div>
+                    <div class="project-link-container">
+                        <a href="https://github.com/corentinIstace/tree_lidge-game" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
+                        <a href="" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
                     </div>
                 </article>
             </div>
@@ -142,6 +163,6 @@
             <p><i class="far fa-copyright"></i> made by Corentin Istace</p>
         </div>
     </footer>
-    <script src="./gulp/concat.js?cb=1637756639550"></script>
+    <script src="./gulp/concat.js?cb=1637768060999"></script>
 </body>
 </html>
