--- a/gulp/index.html
+++ b/gulp/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./gulp/style.css?cb=1637768060999">
+    <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+    <link rel="stylesheet" href="./gulp/style.css?cb=1637836417141">
     <title>Corentin Istace - Portfolio</title>
 </head>
 <body>
@@ -39,13 +40,14 @@
         <section class="part" id="about">
             <div class="part-title">
                 <h3>About me ~</h3>
-                <p>I have very good knowledge about HTML5, CSS3, SASS, Git and Github,</p>
-                <p>Good Knoledge about Javascript, PHP,</p>
-                <p>Basics Knoledge about React, Parcel, Gulp, Docker.</p>
             </div>
             <div id="about-container">
                 <img src="./gulp/img/linkedin.webp" alt="photo de moi">
-                <p>text sur moi Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia aliquid dicta aliquam quidem possimus magni quos quae culpa quas? Modi dicta, sint est sequi totam quasi tempora optio inventore autem?</p>
+                <div id="about-text">
+                    <p>I have very good knowledge about HTML5, CSS3, SASS, Git and Github,</p>
+                    <p>Good Knowledge about Javascript, PHP, Wordpress,</p>
+                    <p>Basics Knowledge about React, Parcel, Gulp, Docker.</p>
+                </div>
             </div>
         </section>
 
@@ -62,8 +64,14 @@
                         <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
                     </div>
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/dj-project" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="https://corentinistace.github.io/dj-project/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                        <a href="https://github.com/corentinIstace/dj-project" class="project-link-git" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="https://corentinistace.github.io/dj-project/" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project2">
@@ -71,25 +79,35 @@
                     <P>Made with HTML - Sass - Javascript - Gulp</P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <i class="fab fa-sass"></i>
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo javascript non-officiel">
+                        <i class="fab fa-gulp"></i>
                     </div>
-                                      <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/portefolio" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="https://corentinistace.github.io/portefolio/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                    <div class="project-link-container">
+                        <a href="https://github.com/corentinIstace/portefolio" class="project-link" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="https://corentinistace.github.io/portefolio/" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project3">
-                    <h3 class="project-title">Happy Street</h3>                    
-                    <P>Made with HTML - CSS - Javascript</P>  
+                    <h3 class="project-title">P.I.L project</h3>                    
+                    <P>Made with PHP - Wordpress</P>  
                     <div class="items">
-                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
                     </div>
-                                      <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/Hackaton" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                    <div class="project-link-container">
+                        <a href="" class="project-link" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project4">
@@ -97,12 +115,18 @@
                     <P>Made with React</P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo javascript non-officiel">
+                        <i class="fab fa-react"></i>
                     </div>
                    <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/weather-app" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="https://619cc0abe34a10e997aaec40--ci-my-weather-app.netlify.app/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                        <a href="https://github.com/corentinIstace/weather-app" class="project-link" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="https://619cc0abe34a10e997aaec40--ci-my-weather-app.netlify.app/" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project5">
@@ -111,11 +135,17 @@
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo javascript  non-officiel">
                     </div>
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/jeux" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="https://upbeat-spence-4b1f46.netlify.app/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                        <a href="https://github.com/corentinIstace/jeux" class="project-link" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="https://upbeat-spence-4b1f46.netlify.app/" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project6">
@@ -124,10 +154,17 @@
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <i class="fab fa-react"></i>
                     </div>
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/tree_lidge-game" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                        <a href="https://github.com/corentinIstace/tree_lidge-game" class="project-link" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
             </div>
@@ -163,6 +200,6 @@
             <p><i class="far fa-copyright"></i> made by Corentin Istace</p>
         </div>
     </footer>
-    <script src="./gulp/concat.js?cb=1637768060999"></script>
+    <script src="./gulp/concat.js?cb=1637836417141"></script>
 </body>
 </html>
