--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
     <link rel="stylesheet" href="./gulp/style.css?cb=1637743665999">
     <title>Corentin Istace - Portfolio</title>
 </head>
@@ -14,7 +15,6 @@
             <header>
                 <nav id="navbar">
                     <ul>
-                        <!-- <li><a href="#home">Home</a></li> -->
                         <li><a href="#about">About me</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
@@ -57,80 +57,114 @@
             <div id="projects-container">
                 <article class="project project1">
                     <h3 class="project-title">Dj's project</h3>                    
-                    <P>Made with HTML - CSS </P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
                     </div>
+                    <P>Made with HTML - CSS </P>   
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/dj-project" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="https://corentinistace.github.io/dj-project/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                        <a href="https://github.com/corentinIstace/dj-project" class="project-link-git" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="https://corentinistace.github.io/dj-project/" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project2">
                     <h3 class="project-title">This portfolio</h3>                    
-                    <P>Made with HTML - Sass - Javascript - Gulp</P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <i class="fab fa-sass"></i>
-                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo javascript non-officiel">
+                        <img class="svg svg-js" src="./gulp/svg/javascript.svg" alt="svg du logo javascript non-officiel">
                         <i class="fab fa-gulp"></i>
                     </div>
+                    <P>Made with HTML - Sass - Javascript - Gulp</P>   
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/portefolio" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="https://corentinistace.github.io/portefolio/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                        <a href="https://github.com/corentinIstace/portefolio" class="project-link-git" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="https://corentinistace.github.io/portefolio/" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project3">
-                    <h3 class="project-title">Happy Street</h3>                    
-                    <P>Made with HTML - CSS - Javascript</P>  
+                    <h3 class="project-title">P.I.L project</h3>                    
                     <div class="items">
-                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo javascript non-officiel">
+                        <i class="fab fa-php"></i>
+                        <i class="fab fa-wordpress"></i>
                     </div>
+                    <P>Made with PHP - Wordpress</P>  
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/Hackaton" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                        <a href="" class="project-link-git" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project4">
                     <h3 class="project-title">weather app</h3>
-                    <P>Made with React</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo javascript non-officiel">
                         <i class="fab fa-react"></i>
                     </div>
-                   <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/weather-app" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="https://619cc0abe34a10e997aaec40--ci-my-weather-app.netlify.app/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                    <P>Made with React</P>   
+                    <div class="project-link-container">
+                        <a href="https://github.com/corentinIstace/weather-app" class="project-link-git" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="https://61a10181a4ef52000799db8c--ci-my-weather-app.netlify.app/" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project5">
                     <h3 class="project-title">Random number game</h3>
-                    <P>Made with HTML - CSS - Javascript</P>   
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
                         <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo javascript  non-officiel">
+                        <img class="svg svg-js" src="./gulp/svg/javascript.svg" alt="svg du logo javascript  non-officiel">
                     </div>
+                    <P>Made with HTML - CSS - Javascript</P>   
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/jeux" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="https://upbeat-spence-4b1f46.netlify.app/" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                        <a href="https://github.com/corentinIstace/jeux" class="project-link-git" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="https://upbeat-spence-4b1f46.netlify.app/" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
                 <article class="project project6">
                     <h3 class="project-title">Tree Lidge Game</h3>
-                    <P>Mern project</P>   
                     <div class="items">
-                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/svg/javascript.svg" alt="svg du logo CSS  non-officiel">
+                        <img class="svg-mongo" src="./img/MongoDB.svg" alt="svg du logo mongoDB non-officiel">
+                        <img class="svg-express" src="./img/expressjslogo.svg" alt="svg du logo express non-officiel">
                         <i class="fab fa-react"></i>
+                        <i class="fab fa-node-js"></i>
                     </div>
+                    <P>Mern project</P>   
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/tree_lidge-game" class="project-link" title="Go to the Github repo"><i class="fas fa-folder" ></i><i class="fas fa-folder-open"></i></a> 
-                        <a href="" title="Watch in the browser"><i class="fas fa-sign-in-alt"></i></a> 
+                        <a href="https://github.com/corentinIstace/tree_lidge-game" class="project-link-git" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="" class="project-link-net" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
                     </div>
                 </article>
             </div>
